Fix for homepage overflow.

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,10 @@ html, body {
   height: 100%;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .section h2{
   padding-top:0px;
 }
